# lcov-parser

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  index.html  search-index.js
examples/: each_records.rs  each_records_for_bytes.rs  from_file.rs  lazy_parser.rs  marge_files.rs  parse_all.rs  parser.rs
fixture/: report.lcov
lcov_parser/: FromFile.t.html  FunctionName.t.html  LCOVParser.t.html  LCOVRecord.t.html  RecordParseError.t.html  enum.LCOVRecord.html  enum.ParseError.html  fn.merge_files.html  fn.parse_record.html  fn.parse_report.html  impl_from_error.m.html  impl_summary.m.html  impl_try_merge.m.html  index.html  macro.impl_from_error.html  macro.impl_summary.html  macro.impl_try_merge.html  macro.impl_try_merge_self_summary!.html  macro.impl_try_merge_self_summary.html  sidebar-items.js  struct.BranchData.html  struct.FunctionData.html  struct.FunctionName.html  struct.LCOVParser.html  struct.LineData.html  struct.RecordParseError.html  struct.Report.html  trait.FromFile.html  trait.RecordWrite.html  type.ParseResult.html
lcov_parser/attribute/: ExecutionCount.t.html  FunctionName.t.html  SourceFile.t.html  index.html  sidebar-items.js  type.CheckSum.html  type.ExecutionCount.html  type.FunctionName.html  type.LineNumber.html  type.SourceFile.html  type.TestName.html
lcov_parser/branch/: index.html  sidebar-items.js  struct.Branch.html  struct.BranchBlocks.html  struct.BranchUnit.html  (+1 more)
src/: combinator.rs  combinator2.rs  lib.rs  macros.rs  parser.rs  parser2.rs  record.rs  util.rs
tests/: without_checksum.rs
(+164 files in other folders)
