[package]
name = "lcov-parser"
version = "1.0.1"
keywords = [ "parser", "LCOV", "report", "code-coverage" ]
description = "LCOV report parser for Rust"
authors = [ "holyshared <holy.shared.design@gmail.com>" ]
license = "MIT/Apache-2.0"
repository = "https://github.com/holyshared/lcov-parser"
readme = "README.md"

[dependencies]
combine = "1.3.0"
